--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,12 @@ scripts:
   - npm run coverage
   - npm run build
 after_success:
-  - firebase deploy --token "$FIREBASE_TOKEN"
+  deploy:
+    provider: firebase
+    token:
+      secure: "$$FIREBASE_TOKEN"
+  on:
+    branch: master
 
 notifications:
   email:
